Preparing as a dotnet global tool

--- a/repo-version.csproj
+++ b/repo-version.csproj
@@ -4,6 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>repo_version</RootNamespace>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>repo-version</ToolCommandName>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
