--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,6 @@ jobs:
       - checkout
       - run:
           name: Run Build Script
+          context: "repo-version secrets"
           command:
             ./build.sh
