--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,10 @@ jobs:
       - checkout
       - run:
           name: Run Build Script
-          command:
-            ./build.sh
-  workflows:
-    version: 2
-    build:
-      jobs:
-        - build:
-            context: repo-version-secrets
+          command: ./build.sh
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build:
+          context: repo-version-secrets
