--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,10 @@ jobs:
       - checkout
       - run:
           name: Run Build Script
-          command:
-            ./build.sh
+          command: ./build.sh --target Publish
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build:
+          context: repo-version-secrets
