--- a/repo-version.csproj
+++ b/repo-version.csproj
@@ -7,6 +7,8 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>repo-version</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
+    <Authors>kjjuno</Authors>
+    <PackageProjectUrl>https://github.com/kjjuno/repo-version</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
