--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,14 @@
 version: 2.0
 jobs:
-  build:
+  pack:
+    docker:
+      - image: mcr.microsoft.com/dotnet/core/sdk:2.2
+    steps:
+      - checkout
+      - run:
+          name: Run Build Script
+          command: ./build.sh --target Pack
+  publish:
     docker:
       - image: mcr.microsoft.com/dotnet/core/sdk:2.2
     steps:
@@ -10,7 +18,11 @@ jobs:
           command: ./build.sh --target Publish
 workflows:
   version: 2
-  build:
+  build-and-publish:
     jobs:
-      - build:
+      - pack:
+      - publish:
           context: repo-version-secrets
+          filters:
+            tags:
+              only: /.*/
