--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.0
 jobs:
   pack:
     docker:
-      - image: mcr.microsoft.com/dotnet/core/sdk:2.2
+      - image: kjjuno/dev-dotnet:latest
     steps:
       - checkout
       - run:
