Including xml docs for Cake.RepoVersoin

--- a/src/Cake.RepoVersion/Cake.RepoVersion.csproj
+++ b/src/Cake.RepoVersion/Cake.RepoVersion.csproj
@@ -5,6 +5,10 @@
     <PackageOutputPath>../../nupkg</PackageOutputPath>
     <PackageIconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics/png/cake-contrib-medium.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/kjjuno/repo-version</PackageProjectUrl>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+    <NoWarn>NU5105</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="$(TargetFramework.StartsWith('net4')) and '$(OS)' == 'Unix'">
     <!-- When compiling .NET SDK 2.0 projects targeting .NET 4.x on Mono using 'dotnet build' you -->
