--- a/src/repo-version/repo-version.csproj
+++ b/src/repo-version/repo-version.csproj
@@ -10,7 +10,15 @@
     <Authors>kjjuno</Authors>
     <PackageProjectUrl>https://github.com/kjjuno/repo-version</PackageProjectUrl>
     <NoWarn>NU5105</NoWarn>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.26.0" />
